Implemented rootfs/bootfs copy

--- a/distros/arch/config
+++ b/distros/arch/config
@@ -1,5 +1,5 @@
 URL=https://github.com/dreemurrs-embedded/Pine64-Arch/releases/download/20230925/archlinux-pinephone-pro-phosh-20230925.img.xz
-PARTLABEL=ARCH
+PARTLABEL=ppp-multi-image-arch
 BOOT_PT=1
 ROOT_PT=2
 EXTRACT=unxz
