--- a/distros/mobian/overrides/boot/extlinux/extlinux.conf
+++ b/distros/mobian/overrides/boot/extlinux/extlinux.conf
@@ -1,3 +1,6 @@
+menu title Pinephone Pro Boot Menu
+label l0
+menu label MOBIAN
 linux /boot/vmlinuz-6.6-rockchip
 initrd /boot/initrd.img-6.6-rockchip
 fdtdir /boot/dtb-6.6-rockchip/
