--- a/distros/pmos/overrides/boot/extlinux/extlinux.conf
+++ b/distros/pmos/overrides/boot/extlinux/extlinux.conf
@@ -1,3 +1,6 @@
+menu title Pinephone Pro Boot Menu
+label l0
+menu label PMOS
 fdtdir /boot/dtbs-pine64-pinephonepro/
 linux /boot/vmlinuz
 initrd /boot/initramfs-extra
