--- a/distros/arch/overrides/boot/extlinux/extlinux.conf
+++ b/distros/arch/overrides/boot/extlinux/extlinux.conf
@@ -1,3 +1,6 @@
+menu title Pinephone Pro Boot Menu
+label l0
+menu label ARCH
 fdt /boot/dtbs/rockchip/rk3399-pinephone-pro.dtb
 initrd /boot/initramfs-linux.img
 kernel /boot/Image.gz
