Added rootfs distro installation method
In preparation for adding SailfishOS.

--- a/distros/mobian/config
+++ b/distros/mobian/config
@@ -1,5 +1,7 @@
 URL=https://images.mobian.org/pinephonepro/weekly/mobian-pinephonepro-phosh-20240121.img.xz
 PARTLABEL=ppp-multi-image-mobian
+
+METHOD=img
 BOOT_PT=1
 ROOT_PT=2
 EXTRACT=unxz
