--- a/distros/arch/config
+++ b/distros/arch/config
@@ -1,5 +1,7 @@
 URL=https://github.com/dreemurrs-embedded/Pine64-Arch/releases/download/20230925/archlinux-pinephone-pro-phosh-20230925.img.xz
 PARTLABEL=ppp-multi-image-arch
+
+METHOD=img
 BOOT_PT=1
 ROOT_PT=2
 EXTRACT=unxz
