--- a/distros/manjaro/config
+++ b/distros/manjaro/config
@@ -1,5 +1,7 @@
 URL=https://github.com/manjaro-pinephone/phosh/releases/download/beta37/Manjaro-ARM-phosh-pinephonepro-beta37.img.xz
 PARTLABEL=ppp-multi-image-manjaro
+
+METHOD=img
 BOOT_PT=1
 ROOT_PT=2
 EXTRACT=unxz
